Bug 857989 - Add Serif/Sans Serif font toggle to Reader Mode. r=lucasr
UltraBlame original commit: 13063c6cfcd6c05627fdc7666d4a3b8c911563cd

--- a/mobile/android/locales/en-US/chrome/aboutReader.properties
+++ b/mobile/android/locales/en-US/chrome/aboutReader.properties
@@ -11,3 +11,8 @@ aboutReader.marginTitle=Margins
 aboutReader.colorSchemeLight=Light
 aboutReader.colorSchemeDark=Dark
 aboutReader.colorSchemeSepia=Sepia
+
+aboutReader.fontTypeSansSerif=Sans
+aboutReader.fontTypeSerif=Serif
+
+aboutReader.toolbarTip=Tap the screen to show reader options
