--- a/browser/locales/en-US/chrome/browser/devtools/gclicommands.properties
+++ b/browser/locales/en-US/chrome/browser/devtools/gclicommands.properties
@@ -12,14 +12,6 @@
 # A good criteria is the language in which you'd find the best
 # documentation on web development on the web.
 
-# LOCALIZATION NOTE (echoDesc) A very short string used to describe the
-# function of the echo command.
-echoDesc=Show a message
-
-# LOCALIZATION NOTE (echoMessageDesc) A very short string used to describe the
-# message parameter to the echo command.
-echoMessageDesc=Message
-
 # LOCALIZATION NOTE (helpDesc) A very short string used to describe the
 # function of the help command.
 helpDesc=Get help on the available commands
@@ -734,14 +726,13 @@ pagemodRemoveAttributeIgnoreCaseDesc=Perform case-insensitive search
 # result of the 'pagemod remove attribute' command.
 pagemodRemoveAttributeResult=Elements matched by selector: %1$S. Attributes removed: %2$S.
 
-# LOCALIZATION NOTE (toolsDesc2) A very short description of the 'tools'
+# LOCALIZATION NOTE (toolsDesc) A very short description of the 'tools'
 # command, the parent command for tool-hacking commands.
-# The argument (%1$S) is the browser name.
-toolsDesc2=Hack the %1$S Developer Tools
+toolsDesc=Hack the &brandShortName; Developer Tools
 
-# LOCALIZATION NOTE (toolsManual2) A fuller description of the 'tools'
-# command. The argument (%1$S) is the browser name.
-toolsManual2=Various commands related to hacking directly on the %1$S Developer Tools.
+# LOCALIZATION NOTE (toolsDesc) A fuller description of the 'tools'
+# command.
+toolsManual=Various commands related to hacking directly on the &brandShortName; Developer Tools.
 
 # LOCALIZATION NOTE (toolsSrcdirDesc) A very short description of the 'tools srcdir'
 # command, for pointing your developer tools loader at a mozilla-central source tree.
@@ -755,9 +746,9 @@ toolsSrcdirNotFound=%1$s does not exist or is not a mozilla-central checkout.
 # 'tools srcdir' command.
 toolsSrcdirReloaded=Tools loaded from %1$s.
 
-# LOCALIZATION NOTE (toolsSrcdirManual2) A full description of the 'tools srcdir'
-# command. The argument (%1$S) is the browser name.
-toolsSrcdirManual2=Load the %1$S Developer Tools from a complete mozilla-central checkout.
+# LOCALIZATION NOTE (toolsSrcdirDesc) A full description of the 'tools srcdir'
+# command.
+toolsSrcdirManual=Load the &brandShortName; Developer Tools from a complete mozilla-central checkout.
 
 # LOCALIZATION NOTE (toolsSrcdirDir) The srcdir argument to the 'tools srcdir' command.
 toolsSrcdirDir=A mozilla-central checkout
@@ -772,15 +763,15 @@ toolsBuiltinManual=Use the builtin tools, overriding any previous srcdir command
 
 # LOCALIZATION NOTE (toolsBuiltinReloaded) Displayed when tools are loaded with the
 # 'tools builtin' command.
-toolsBuiltinReloaded=Builtin tools loaded.
+toolsBuiltinReloaded=Built-in tools loaded.
 
 # LOCALIZATION NOTE (toolsReloadDesc) A short description of the 'tools reload' command.
 # which will reload the tools from the current srcdir.
 toolsReloadDesc=Reload the developer tools
 
-# LOCALIZATION NOTE (toolsReloaded2) Displayed when tools are reloaded with the 'tools
+# LOCALIZATION NOTE (toolsReloaded) Displayed when tools are reloaded with the 'tools
 # reload' command.
-toolsReloaded2=Tools reloaded.
+toolsReloaded="Tools reloaded."
 
 # LOCALIZATION NOTE (cookieDesc) A very short description of the 'cookie'
 # command. See cookieManual for a fuller description of what it does. This
@@ -1270,3 +1261,27 @@ profilerStopping2=Stopping…
 # LOCALIZATION NOTE (profilerNotReady) A message that is displayed whenever
 # an operation cannot be completed because the profiler has not been opened yet.
 profilerNotReady=For this command to work you need to open the profiler first
+
+# LOCALIZATION NOTE (listenDesc) A very short string used to describe the
+# function of the 'listen' command.
+listenDesc=Open a remote debug port
+
+# LOCALIZATION NOTE (listenManual) A longer description of the 'listen'
+# command.
+listenManual=Firefox can allow remote debugging over a TCP/IP connection. For security reasons this is turned off by default, but can be enabled using this command.
+
+# LOCALIZATION NOTE (listenPortDesc) A very short string used to describe the
+# function of 'port' parameter to the 'listen' command.
+listenPortDesc=The TCP port to listen on
+
+# LOCALIZATION NOTE (listenDisabledOutput) Text of a message output during the
+# execution of the 'listen' command.
+listenDisabledOutput=Listen is disabled by the devtools.debugger.remote-enabled preference
+
+# LOCALIZATION NOTE (listenInitOutput) Text of a message output during the
+# execution of the 'listen' command. %1$S is a port number
+listenInitOutput=Listening on port %1$S
+
+# LOCALIZATION NOTE (listenNoInitOutput) Text of a message output during the
+# execution of the 'listen' command.
+listenNoInitOutput=DebuggerServer not initialized
