Bug 1436165 - Change extensionControlled strings for home page and new tab page, r=jaws,mstriemer
MozReview-Commit-ID: KcWiCm5nbeB

UltraBlame original commit: 1abd8bf0d997cd4ed76f5b75cf0f5b3f4a99d3a2

--- a/browser/locales/en-US/chrome/browser/preferences/preferences.properties
+++ b/browser/locales/en-US/chrome/browser/preferences/preferences.properties
@@ -275,11 +275,11 @@ defaultContentProcessCount=%S (default)
 
 # LOCALIZATION NOTE (extensionControlled.homepage_override):
 # This string is shown to notify the user that their home page is being controlled by an extension.
-extensionControlled.homepage_override = An extension, %S, controls your home page.
+extensionControlled.homepage_override2 = An extension, %S, is controlling your home page.
 
 # LOCALIZATION NOTE (extensionControlled.newTabURL):
 # This string is shown to notify the user that their new tab page is being controlled by an extension.
-extensionControlled.newTabURL = An extension, %S, controls your New Tab page.
+extensionControlled.newTabURL2 = An extension, %S, is controlling your New Tab page.
 
 # LOCALIZATION NOTE (extensionControlled.defaultSearch):
 # This string is shown to notify the user that the default search engine is being controlled
