Bug 1201590 - WebMIDI device access permissions prompt implementation; r=baku,johannh
MozReview-Commit-ID: LxElgfdaiQs

UltraBlame original commit: a84ef21b6b36193d56d5fe470cd27074b810391a

--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -929,3 +929,15 @@ aboutDialog.architecture.thirtyTwoBit = 32-bit
 # Shown in the browser console when visiting a website that is trusted today,
 # but won't be in the future unless the site operator makes a change.
 certImminentDistrust.message = The security certificate in use on this website will no longer be trusted in a future release. For more information, visit https://wiki.mozilla.org/CA/Upcoming_Distrust_Actions
+
+midi.Allow.label = Allow
+midi.Allow.accesskey = A
+midi.DontAllow.label = Don’t Allow
+midi.DontAllow.accesskey = N
+midi.remember=Remember this decision
+midi.shareWithFile.message = Will you allow this local file to access your MIDI Devices?
+# LOCALIZATION NOTE (midi.shareWithFile.message): %S is the name of the site URL (https://...) requesting MIDI access
+midi.shareWithSite.message = Will you allow %S to access your MIDI Devices?
+midi.shareSysexWithFile.message = Will you allow this local file to access your MIDI devices and send/receive SysEx messages?
+# LOCALIZATION NOTE (midi.shareSysexWithFile.message): %S is the name of the site URL (https://...) requesting MIDI access
+midi.shareSysexWithSite.message = Will you allow %S to access your MIDI devices and send/receive SysEx messages?
