--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -212,9 +212,9 @@ webextSitePerms.headerWithGatedPerms.midi-sysex=This add-on gives %S access to y
 
 # LOCALIZATION NOTE (webextSitePerms.descriptionGatedPerms)
 # This string is used as description in the webextension permissions dialog for synthetic add-ons.
-# %S will be replaced by the DNS host name for which a webextension enables permissions
+# Note, the \n\n is used to create a line break between the two sections.
 # Note, this string will be used as raw markup. Avoid characters like <, >, &
-webextSitePerms.descriptionGatedPerms=This access can be dangerous, and allows the site to act like software installed on your computer.
+webextSitePerms.descriptionGatedPerms.midi=These are usually plug-in devices like audio synthesizers, but might also be built into your computer.\n\nWebsites are normally not allowed to access MIDI devices. Improper usage could cause damage or compromise security.
 
 # These should remain in sync with permissions.NAME.label in sitePermissions.properties
 webextSitePerms.description.midi=Access MIDI devices
