--- a/toolkit/components/translations/tests/browser/browser.ini
+++ b/toolkit/components/translations/tests/browser/browser.ini
@@ -1,6 +1,8 @@
 [DEFAULT]
 support-files =
   head.js
+  shared-head.js
+  translations-test.mjs
   translations-tester-en.html
   translations-tester-es.html
   translations-tester-no-tag.html
