--- a/toolkit/components/translations/fasttext/moz.yaml
+++ b/toolkit/components/translations/fasttext/moz.yaml
@@ -38,16 +38,7 @@ origin:
 
     https://github.com/facebookresearch/fastText
 
+    There are detailed instructions in the Firefox Source Docs on how to build these
+    dependencies locally.
 
-    In order to generate code that is usable by Firefox, you need to add the following
-    directive to the EMCXXFLAGS variable in the Makefile before running `make wasm`:
-
-    -s "DYNAMIC_EXECUTION=0"
-
-    The fasttext.js file is modified by adding the `loadModelBinary()` function.
-
-    The fasttext_wasm.js is modified to declare a top-level function instead of
-    exporting a variable called FastTextModule, and is also minified to reduce its size.
-
-
-
+    https://firefox-source-docs.mozilla.org/toolkit/components/translations/resources/02_contributing.html#building-fasttext
