--- a/toolkit/components/translations/tests/browser/browser.ini
+++ b/toolkit/components/translations/tests/browser/browser.ini
@@ -10,4 +10,5 @@ support-files =
 skip-if = 
   os == 'linux'  # Bug 1821461
 [browser_full_page.js]
+[browser_remote_settings.js]
 [browser_translation_document.js]
