--- a/toolkit/components/translations/tests/browser/browser.ini
+++ b/toolkit/components/translations/tests/browser/browser.ini
@@ -12,3 +12,4 @@ skip-if =
 [browser_full_page.js]
 [browser_remote_settings.js]
 [browser_translation_document.js]
+[browser_translations_actor.js]
