Bug 1934270 - Implement Protection Panel banner states. r=gl,android-reviewers
Implement the three banner states for the protection panel, as described in the Figma spec.

Figma: https://www.figma.com/design/fYqZbJCyoO4IO0LxgSRWW8/Unified-Trust-Panel?node-id=8249-384827&t=tvkVQaEFfw8bp4jr-4

Differential Revision: https://phabricator.services.mozilla.com/D230695

UltraBlame original commit: 01fa1abfd6b136e0dcf4be7ad743c90d003a845a

--- a/mobile/android/fenix/app/src/main/res/values/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values/strings.xml
@@ -2749,6 +2749,22 @@
     <!-- Button text on the data saving mode warning dialog used by the translations feature to allow users to cancel the action and not perform a download of the language file. -->
     <string name="download_language_file_dialog_negative_button_text">Cancel</string>
 
+    <!-- Unified Trust Panel -->
+    <!-- Title text for the protection panel banner when the site is not secure. -->
+    <string name="protection_panel_banner_not_secure_title">Be careful on this site</string>
+    <!-- Description text for the protection panel banner when the site is not secure. -->
+    <string name="protection_panel_banner_not_secure_description">Your connection is not secure.</string>
+    <!-- Title text for the protection panel banner when tracking protection is disabled. -->
+    <string name="protection_panel_banner_not_protected_title">You turned off protections</string>
+    <!-- Description text for the protection panel banner when tracking protection is disabled.
+        The first parameter is the name of the app defined in app_name (for example: Fenix) -->
+    <string name="protection_panel_banner_not_protected_description">%s is off-duty. We suggest turning protections back on.</string>
+    <!-- Title text for the protection panel banner when tracking protection is enabled.
+        The first parameter is the name of the app defined in app_name (for example: Fenix) -->
+    <string name="protection_panel_banner_protected_title">%s is on guard</string>
+    <!-- Description text for the protection panel banner when tracking protection is enabled. -->
+    <string name="protection_panel_banner_protected_description">You’re protected. If we spot something, we’ll let you know.</string>
+
     <!-- Debug drawer -->
     <!-- The user-facing title of the Debug Drawer feature. -->
     <string name="debug_drawer_title">Debug Tools</string>
